Fix alignment, spacing, and size of properties of the header

--- a/css/index.css
+++ b/css/index.css
@@ -69,9 +69,9 @@ h1, h2, h3, h4, h5 {
 /* ------Your code starts here!------------- */
 
 @media(max-width: 800px) {
-        .container {
-        border-left: 1px solid #D1D5DA;
-        border-right: 1px solid #D1D5DA;
+    .container {
+        border-left: .001rem solid #D1D5DA;
+        border-right: .001rem solid #D1D5DA;
         padding: 2.5% 5%;
         margin: auto;
     }
@@ -110,37 +110,39 @@ h1, h2, h3, h4, h5 {
     }
 
     header {
-        margin-bottom: 30px;
+        margin-bottom: 10%;
     }
-
-    
 
     .cta {
         display: flex;
         flex-direction: row;
+        width: 100%;
+        justify-content: center;
+        align-content: center;
     }
 
     .cta-text {
         display: flex;
         flex-direction: column;
-        width: 50%;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
     }
 
     .cta-text h1 {
-        font-size: 75px;
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        font-size: 400%;
+        justify-content: center;
         text-align: center;
     }
 
     .cta-text a {
         color: black;
-        border: 1px solid black;
-        padding: 7px 40px 8px;
-        margin-top: 8px;
+        border: .001rem solid black;
+        padding: 0.5re, 0;
+        margin-top: 3%;
         text-decoration: none;
-        font-size: 17px;
+        text-align: center;
+        font-size: 1.01rem;
     }
 
     .cta-img {
@@ -149,7 +151,7 @@ h1, h2, h3, h4, h5 {
     }
 
     .main-content {
-        width: 876px;
+        width: 95%;
         border-top: 1px solid black;
         border-bottom: 1px solid black;
         padding: 40px 0 40px;
@@ -217,6 +219,7 @@ h1, h2, h3, h4, h5 {
         padding: 50px 0;
     }
 
+}
     /* ---------Services Page-------- */
 
     .services {
